Working basic GPS-only interpolation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        viewBinding true
+
         compose true
     }
     composeOptions {
@@ -55,8 +57,12 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.2.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-
+    implementation "com.mapbox.navigation:ui-dropin:2.11.0"
+    implementation 'com.mapbox.maps:android:10.12.1'
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation project(":FreeLocationProvider")
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
