--- a/FreeLocationProviderMapbox/build.gradle
+++ b/FreeLocationProviderMapbox/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.0'
 }
 
 android {
-    namespace 'dev.pwar.freelocationprovider'
+    namespace 'dev.pwar.freelocationprovidermapbox'
     compileSdk 33
 
     defaultConfig {
@@ -32,13 +31,12 @@ android {
 }
 
 dependencies {
-    implementation "androidx.datastore:datastore:1.0.0"
+    implementation project(":FreeLocationProvider")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'org.ejml:ejml-all:0.42'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
+    implementation "com.mapbox.navigation:android:2.10.4"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
