--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+MAPBOX_DOWNLOADS_TOKEN=sk.eyJ1IjoicHdhcmRldiIsImEiOiJjbGh4bHF1cTgwOGoyM3Fyc2lyd>
