--- a/FreeLocationProviderMapbox/build.gradle
+++ b/FreeLocationProviderMapbox/build.gradle
@@ -39,7 +39,7 @@ publishing {
     publications {
         release(MavenPublication) {
             groupId = 'com.github.fcuringa'
-            artifactId = 'FreeLocationProvider:FreeLocationProviderMapbox'
+            artifactId = 'FreeLocationProviderMapbox'
             version = '0.1'
 
             afterEvaluate {
