--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install:
   - echo "Running a custom install command"
-  - ./gradlew clean FreeLocationProviderMapbox:install -xtest
+  - ./gradlew clean FreeLocationProviderMapbox:publishReleasePublicationToMavenLocal -xtest
