--- a/FreeLocationProviderMapbox/build.gradle
+++ b/FreeLocationProviderMapbox/build.gradle
@@ -38,7 +38,7 @@ android {
 publishing {
     publications {
         release(MavenPublication) {
-            groupId = 'com.github.fcuringa'
+            groupId = 'com.github.fcuringa.FreeLocationProvider'
             artifactId = 'FreeLocationProviderMapbox'
             version = '0.1'
 
