--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,17 @@ buildscript {
     ext {
         compose_ui_version = '1.2.0'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    dependencies {
+        classpath 'io.github.gradle-nexus:publish-plugin:1.3.0'
+    }
+}
+
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
+
+apply from: "${rootDir}/scripts/publish-root.gradle"
